# reflex

./: .gitignore  COPYING  Doxyfile  INSTALL  Makefile  Makefile.am  README  cartpend.c  cartpend.gnuplot  configure.ac  control.c  control.h  lqg.c  lqg.f90  lqgtest  lqgtest.c  rfx_test.cpp  springmassdamper.m  trajectory.cpp  trajectory_plot.cpp
debian/: README  changelog  control  copyright
doc/: Makefile.am  rfx-trajgen.inc
include/: reflex.h  reflex.hpp
include/reflex/: body.h  control.h  kinematics.h  lqg.h  tf.h  trajectory.h  trajq.h  trajx.h
java/: Lib.java  Test.java  reflexj.c
lisp/: frame.lisp  package.lisp  reflex-load.lisp  reflex.asd  urdf.lisp
scripts/: rfx-urdfc
src/: cartpend.c  control.c  kin.c  kinematics.f90  lqg.c  lqg_tf.c  lqg_tf_f.f90  lqgf.f90  lqgtest.c  plot.c  plot_test.c  reflex_mod.F90  rfx_tf.c  traj.c  trajectory.cpp  trajectory_plot.cpp  trajq.c  trajq.cpp  trajx.cpp
src/body/: body.cpp
src/demo/: rfx-camcal-test.c  rfx-camcal.c  rfx-qblend.c  rfx-trajgen.c
src/lqg/: lqg.c
src/test/: plot-tf-filter  test-tf-filter.c
src/tf/: dud.c  lqg_tf_f.f90  rfx_tf.c  rfx_tff.f90
